kubernetes/overlays/infrastructure/infra/applications/monitoring/rsyslog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsyslog
  annotations:
    lbipam.cilium.io/ips: "REDACTED_IP"
    lbipam.cilium.io/sharing-key: "traefik"
    lbipam.cilium.io/sharing-cross-namespace: "traefik,monitoring"
spec:
  type: LoadBalancer
  selector:
    app: rsyslog
  ports:
    - name: syslog-tcp
      port: 514
      targetPort: 51514
      protocol: TCP
    - name: syslog-udp
      port: 514
      targetPort: 51514
      protocol: UDP
