kubernetes/overlays/infrastructure/infra/applications/monitoring/syslog-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syslog-tcp
spec:
  entryPoints:
    - syslog-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: rsyslog
          port: 514
          namespace: monitoring
